updating git command

--- a/Week1/deploy.ipynb
+++ b/Week1/deploy.ipynb
@@ -159,8 +159,8 @@
    "outputs": [],
    "source": [
     "git_repo_owner = \"MSDS698\"\n",
-    "git_repo_name = \"msds603_instructor\"\n",
-    "user_id = \"dianewoodbridge\""
+    "git_repo_name = \"2019-msds603-example\"\n",
+    "git_user_id = \"dianewoodbridge\""
    ]
   },
   {
@@ -170,7 +170,8 @@
    "outputs": [],
    "source": [
     "if (b\"\" is stderr.read()):\n",
-    "    git_clone_command = \"git clone https://\" + user_id + \"@github.com/\" + git_repo_owner + \"/\" + git_repo_name + \".git\"\n",
+    "    git_clone_command = \"git clone https://github.com/\" + git_user_id + \"/\" + git_repo_name + \".git\"\n",
+    "    #git_clone_command = \"git clone https://\" + git_user_id + \"@github.com/\" + git_repo_owner + \"/\" + git_repo_name + \".git\"\n",
     "    stdin, stdout, stderr = ssh.exec_command(git_clone_command)\n",
     "    print(stdout.read())\n",
     "    print(stderr.read())"
